# mppi-in-autonomous-driving

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  planning_node.cpp
assets/: lexus.glb  mppi_layout.json
common/: common.cpp  common.hpp  cubic_spline.hpp  obstacle.hpp  reference_line.cpp  reference_line.hpp
common/protos/: config.proto  planning_info.proto
config/: default.yaml  lane_change.yaml  turn_left.yaml  turn_right.yaml  two-into-one-merge.yaml
modules/planner/: stochastic_optimizer.cu  stochastic_optimizer.cuh  trajectory_cost.cu  trajectory_cost.cuh  vehicle_dynamics.cu  vehicle_dynamics.cuh
modules/simulator/: simple_predictor.cpp  simple_predictor.hpp  simulator.cpp  simulator.hpp  simulator_utils.cpp  simulator_utils.hpp
modules/visualizer/: visualizer.cpp  visualizer.hpp  visualizer_utils.cpp  visualizer_utils.hpp
planning/: stochastic_optimizer.cu  stochastic_optimizer.cuh  trajectory_cost.cu  trajectory_cost.cuh  vehicle_dynamics.cu  vehicle_dynamics.cuh
scenarios/: DEU_Salzwedel-107_1_T-7.xml  DEU_Schwetzingen-12_1_T-2.xml  DEU_Schwetzingen-176_1_T-2.xml  POL_Poznan-81_1_T-1.xml  USA_US101-13_5_T-1.xml  ZAM_Zip-1_64_T-1_modify.xml  static_test.xml
simulator/: cubic_spline.cpp  simple_predictor.cpp  simple_predictor.hpp  simulator.cpp  simulator.hpp  simulator_utils.cpp  simulator_utils.hpp
